@@ -1327,6 +1327,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 	
 	$row = get_db_row ("tincidencia", "id_incidencia", $id_inc);
 	$group_name = get_db_sql ("SELECT nombre FROM tgrupo WHERE id_grupo = ".$row["id_grupo"]);
+	$email_from = get_db_sql ("SELECT email_from FROM tgrupo WHERE id_grupo = ".$row["id_grupo"]);
 	$titulo =$row["titulo"];
 	$description = wordwrap(ascii_output($row["descripcion"]), 70, "\n");
 	$prioridad = get_priority_name($row["prioridad"]);
@@ -1437,7 +1438,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 	$msg_code .= "/" . $row["id_usuario"];
 		
 	if (((!$config['email_ticket_on_creation_and_closing']) || ($mode == 5) || ($mode == 1)) && (!$owner_disabled)) {
-		integria_sendmail ($email_owner, $subject, $text, false, $msg_code, "", 0, "", "X-Integria: no_process");
+		integria_sendmail ($email_owner, $subject, $text, false, $msg_code, $email_from, 0, "", "X-Integria: no_process");
 	}
 
     // Send a copy to each address in "email_copy"
@@ -1446,7 +1447,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 	if (($email_copy != "") && (!$config['email_ticket_on_creation_and_closing'])){
         $emails = explode (",",$email_copy);
         foreach ($emails as $em){
-        	integria_sendmail ($em, $subject, $text, false, "", "", 0, "", "X-Integria: no_process");
+        	integria_sendmail ($em, $subject, $text, false, "", $email_from, 0, "", "X-Integria: no_process");
         }
     }
 
@@ -1456,7 +1457,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 		$msg_code .= "/".substr(md5($id_inc . $config["smtp_pass"] . $row["id_creator"]),0,5);
     	$msg_code .= "/".$row["id_creator"];
 
-		integria_sendmail ($email_creator, $subject, $text, false, $msg_code, "", "", 0, "", "X-Integria: no_process");
+		integria_sendmail ($email_creator, $subject, $text, false, $msg_code, $email_from, "", 0, "", "X-Integria: no_process");
     }	
 	//if ($public == 1){
 	if (($public == 1) AND (!$config['email_ticket_on_creation_and_closing'])){
@@ -1470,7 +1471,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
             	    $msg_code .= "/".substr(md5($id_inc . $config["smtp_pass"] .  $row[1]),0,5);
                 	$msg_code .= "/". $row[1];
 
-					integria_sendmail ( $row[0], $subject, $text, false, $msg_code, "", "", 0, "", "X-Integria: no_process");
+					integria_sendmail ( $row[0], $subject, $text, false, $msg_code, $email_from, "", 0, "", "X-Integria: no_process");
                 }
 			}
 		}
@@ -1481,7 +1482,7 @@ function mail_incident ($id_inc, $id_usuario, $nota, $timeused, $mode, $public =
 			if ($contats)
             foreach ($contacts as $contact) {
                 $contact_email = get_db_sql ("SELECT email FROM tcompany_contact WHERE fullname = '$contact'");
-                integria_sendmail ($contact_email, $subject, $text, false, $msg_code, "", "", 0, "", "X-Integria: no_process");
+                integria_sendmail ($contact_email, $subject, $text, false, $msg_code, $email_from, "", 0, "", "X-Integria: no_process");
             }
 	    }
     }
